Part of the fix for bug #11389. Changed CantRenderReplacedElement() to reset the placeholder frame's out-of-flow frame after replacing the primary frame. This allows the block frame code to find the floater in the line's list of floaters